--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,15 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-admin": "^11.3.0",
+    "firebase-functions": "^4.1.0",
+    "openai": "^3.1.0",
+    "telegraf": "^4.11.2"
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
+    "eslint": "^8.29.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^3.0.0"
   },
   "private": true
 }
