--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.2.1",
     "firebase-admin": "^11.3.0",
     "firebase-functions": "^4.1.0",
     "openai": "^3.1.0",
